--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "^1.2.1",
     "firebase": "^5.9.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.1",
