--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-action-button": "^2.8.5",
     "react-native-config": "^0.11.7",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-maps": "^0.23.0",
+    "react-native-modal": "^9.0.0",
+    "react-native-modal-datetime-picker": "^6.1.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^6.4.1",
     "react-navigation": "^3.4.1"
