--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mapbox/polyline": "^1.0.0",
     "@react-native-community/async-storage": "^1.2.1",
     "firebase": "^5.9.0",
+    "geolib": "^2.0.24",
+    "i": "^0.3.6",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "native-base": "^2.12.1",
@@ -19,6 +21,7 @@
     "react-native-config": "^0.11.7",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.1.0",
